# netpw

./: .gitignore  CMakeLists.txt  readme.md
src/: audio_input.c  audio_input.h  audio_output.c  audio_output.h  callback.h  client.c  client.h  coding.c  coding.h  constants.h  cryptography.c  cryptography.h  error_handling.h  lockfree_spsc_queue.cpp  lockfree_spsc_queue.h  main.c  server.c  server.h  tools.c  tools.h
sys/: netpw.1
sys/share/applications/: org.netpw.netpw.desktop
sys/share/metainfo/: org.netpw.netpw.appdata.xml
